conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: identifier expected but 'if' found.
   if (estFaceMur():true) {recule(3);}
   ^