conditions.Conditions.scala.code
def estFaceMur():
   if (estFaceMur():true) {recule(3);}
   else {avance(1:Int);}